Fix the right bar being cut off on smaller screens
Note to self: never! as in never use % without
clamp or anything as your div's height!!

--- a/css/general.css
+++ b/css/general.css
@@ -40,6 +40,7 @@ body {
   display: grid;
   grid-template-columns: clamp(200px, 25vw, 400px) 1fr clamp(200px, 25vw, 400px);
   height: 100vh;
+  overflow: hidden;
 }
 
 #main, #menu {
