--- a/css/right-bar.css
+++ b/css/right-bar.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  gap: clamp(20px, 8vh, 50px)
+  gap: clamp(20px, 8vh, 50px);
 }
 
 .profile-icon {
@@ -55,12 +55,12 @@
 }
 
 .messages-section {
-  height: 40%;
+  height: clamp(100px, 38vh, 396px);
   font-size: 1rem;
 }
 
 .quick-links-section {
-  height: 35%;
+  height: clamp(100px, 30vh, 396px);
   margin-bottom: 10px;
 }
 
